<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/tv_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config"
            android:textColor="@color/black_3"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_centerInParent="true"
            />
        <com.kanhui.laowulao.widget.IconView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_30"
            android:textColor="@color/black"
            android:text="&#xe67d;"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:textColor="@color/black_3"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>


    <View style="@style/horizontal_line"
        android:layout_below="@+id/header"
        android:layout_marginTop="@dimen/dimen_5"
        android:id="@+id/line"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16">

            <TextView
                android:id="@+id/tv_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_setting"
                android:textColor="@color/black_3"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"

                />

            <com.kanhui.laowulao.widget.WeatherView
                android:id="@+id/wv_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:minHeight="150dp">

            </com.kanhui.laowulao.widget.WeatherView>

            <TextView
                android:id="@+id/tv_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps_setting"
                android:textColor="@color/black_3"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dimen_10"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_apps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_contact_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_setting"
                android:textColor="@color/black_3"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dimen_10"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:gravity="center"
        android:padding="@dimen/dimen_10"
        android:layout_margin="@dimen/dimen_16"
        android:background="@drawable/btn_main_selector"
        android:textSize="@dimen/font_18"
        android:textColor="@color/white"
        />


</LinearLayout>