<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/tv_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_select"
            android:textColor="@color/black_3"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_centerInParent="true"
            />
        <com.kanhui.laowulao.widget.IconView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_30"
            android:textColor="@color/black"
            android:text="&#xe67d;"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="@color/black_3"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <View style="@style/horizontal_line"/>
    <LinearLayout
        android:id="@+id/ll_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            app:queryHint="@string/search_app_name"
            app:queryBackground="@color/white"
            android:layout_margin="@dimen/dimen_16"
            android:background="@color/white"
            />
    </LinearLayout>

    <View style="@style/horizontal_line"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_list"
        />

</LinearLayout>